Fixed bug where the homescreen FB like widget was not centered. Added the members' section button to the navigation bar on the home screen.

--- a/server/content/home/home.css
+++ b/server/content/home/home.css
@@ -124,5 +124,4 @@
 .fb-like
 {
 	width: 300px; /* must match what is in html */
-	margin: 1em auto 0px auto;
 }
